--- a/assets/style.css
+++ b/assets/style.css
@@ -70,6 +70,8 @@ nav a:hover{
  margin: 5% 2%;
  padding: 2%;
  position: relative;
+ 
+ 
 }
 .avatar img{
   width: 30%;
@@ -79,11 +81,11 @@ nav a:hover{
 }
 
 /* resume part */
-.resume{
+#resume{
   padding: 2%;
   margin: 5% 2%;
-}
-
+  border: 5px grey;
+  background-image: linear-gradient(to top, #5e9410, #6aa211, #77b012, #85bf12, #93cd12);
 
 /* work part */
 .workCard{
